--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{font-family:Inter,system-ui,Arial;color:#fff;overscroll-behavior:none}
 #kisscamText{position:absolute;top:2vh;left:50%;transform:translateX(-50%);font-size:6vh;font-weight:900;color:red;text-shadow:0 6px 30px rgba(0,0,0,0.6);z-index:60;pointer-events:none}
 
 /* heart centered */
-#heartWrapper{position:absolute;left:50%;top:45%;transform:translate(-50%,-50%);width:95vh;height:80vh;z-index:50;pointer-events:none}
+#heartWrapper{position:absolute;left:50%;top:60%;transform:translate(-50%,-50%);width:120vh;height:80vh;z-index:50;pointer-events:none}
 #heartOutline{width:100%;height:100%}
 
 /* message under banner */
@@ -24,7 +24,7 @@ body{font-family:Inter,system-ui,Arial;color:#fff;overscroll-behavior:none}
 #controls button.right{background:#c1121f}
 
 /* particle hearts */
-#particles{position:absolute;inset:0;pointer-events:none;z-index:55}
+#particles{position:absolute; top:0; left:0; width:100%; height:100%; pointer-events:none;z-index:100}
 .heartParticle{position:absolute;opacity:0;will-change:transform,opacity;pointer-events:none}
 
 /* developer control (hidden small) */
