--- a/style.css
+++ b/style.css
@@ -116,6 +116,21 @@ body{
     opacity:0;
     will-change:transform,opacity;
 }
+#kissOverlay {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 40; /* BELOW heart outline + text */
+    pointer-events: none;
+    opacity: 0;       /* hidden until Kiss! */
+    transition: opacity 0.4s;
+}
+
+#kissOverlay svg {
+    width: 100%;
+    height: 100%;
+}
 
 /***************************
     BUTTONS
